# reinforcement-learning

./: .gitignore  README.md  pyproject.toml  requirements_pip.txt  setup.py
irlc/: update_files.py
irlc/ex00/: fruit_homework.py
irlc/ex01/: bobs_friend.py  chess.py  inventory_environment.py  pacman_hardcoded.py
irlc/ex02/: deterministic_inventory.py  dp.py  dp_model.py  flower_store.py  inventory.py
irlc/ex03/: inventory_evaluation.py  kuramoto.py  toy_2d_control.py
irlc/ex04/: discrete_kuramoto.py  model_pendulum.py  pid.py  pid_car.py  pid_locomotive_agent.py  pid_lunar.py  pid_pendulum.py
irlc/ex05/: boeing_lqr.py  dlqr.py  lqr_agent.py  lqr_pid.py
irlc/ex06/: ilqr.py  ilqr_agent.py  ilqr_pendulum.py  linearization_agent.py
irlc/ex07/: bandits.py  gradient_agent.py  grand_bandit_race.py  nonstationary.py  simple_agents.py  ucb_agent.py
irlc/ex08/: gambler.py  mdp_warmup.py  policy_evaluation.py  policy_iteration.py  value_iteration.py  value_iteration_agent.py
irlc/ex09/: __init__.py  envs.py  mc_agent.py  mc_evaluate.py
irlc/ex10/: q_agent.py  question_td0.py  sarsa_agent.py  td0_evaluate.py
irlc/ex11/: mountain_car.py  nstep_sarsa_agent.py  semi_grad_q.py  semi_grad_sarsa.py
irlc/ex12/: sarsa_lambda_agent.py  semi_grad_nstep_sarsa.py  semi_grad_sarsa_lambda.py
irlc/ex13/: deepq_agent.py  double_deepq_agent.py  dyna_q.py  maximization_bias_environment.py  tabular_double_q.py  torch_networks.py
irlc/project0/: fruit_project_grade.py
irlc/project1/: Project1_handin_160_of_160.token  image-converter.py  (+5 more)
scripts/: test_all_exercises.py
(+131 files in other folders)
